Bug 586722 - Incubator qt embedding should switch to QGraphicsWidgets. r=romaxa